customWidgetList overflow fix

--- a/src/themes/designer/styles/utils.scss
+++ b/src/themes/designer/styles/utils.scss
@@ -19,6 +19,10 @@
     text-overflow: ellipsis;
 }
 
+.overflow {
+    overflow: auto;
+}
+
 .no-overflow {
     overflow: hidden;
 }
